@@ -12,3 +12,18 @@
     headers:
       X-Header: ((request_body))
   priority: 0
+
+# The request body will be parsed with the given regex.
+- id: dynamic-request-body-example-regex
+  tenant: 14-dynamic
+  conditions:
+    method: POST
+    url:
+      path:
+        equals: /dynamic-request-body-regex.txt
+  response:
+    enableDynamicMode: true
+    text: "Posted: ((request_body:'key2=([a-z0-9]*)'))"
+    headers:
+      X-Header: "((request_body:'key3=([a-z0-9]*)'))"
+  priority: 0
