@@ -1,1 +1,1 @@
-The request body parser makes it possible to write the complete posted body to the response.
+The request body parser makes it possible to write the complete posted body to the response. You can also use a regular expression to insert a part of the request body in the response body.
