@@ -419,6 +419,19 @@
       X-Header: ((request_body))
   priority: 0
 
+- id: dynamic-request-body-regex-example
+  conditions:
+    method: POST
+    url:
+      path:
+        equals: /dynamic-request-body-regex.txt
+  response:
+    enableDynamicMode: true
+    text: "Posted: ((request_body:'key2=([a-z0-9]*)'))"
+    headers:
+      X-Header: "((request_body:'key3=([a-z0-9]*)'))"
+  priority: 0
+
 - id: dynamic-display-url-example
   conditions:
     method: GET
