@@ -4457,6 +4457,33 @@
 									"response": []
 								},
 								{
+									"name": "[Create stub] Request body with regex",
+									"request": {
+										"method": "POST",
+										"header": [
+											{
+												"key": "Content-Type",
+												"type": "text",
+												"value": "text/yaml"
+											}
+										],
+										"body": {
+											"mode": "raw",
+											"raw": "id: dynamic-mode-request-body-regex\ntenant: integration\nconditions:\n  method: POST\n  url:\n    path:\n      equals: /dynamic-mode-request-body-regex\nresponse:\n  enableDynamicMode: true\n  headers:\n    X-RequestBody: \"Header request body: ((request_body:'key2=([a-z0-9]*)'))\"\n  text: \"Request body: ((request_body:'key3=([a-z0-9]*)'))\""
+										},
+										"url": {
+											"raw": "{{rootUrl}}ph-api/stubs",
+											"host": [
+												"{{rootUrl}}ph-api"
+											],
+											"path": [
+												"stubs"
+											]
+										}
+									},
+									"response": []
+								},
+								{
 									"name": "[Create stub] Display URL",
 									"request": {
 										"method": "POST",
@@ -5005,6 +5032,52 @@
 											"raw": "{{rootUrl}}dynamic-mode-request-body",
 											"host": [
 												"{{rootUrl}}dynamic-mode-request-body"
+											]
+										}
+									},
+									"response": []
+								},
+								{
+									"name": "Test request body with regex",
+									"event": [
+										{
+											"listen": "test",
+											"script": {
+												"exec": [
+													"pm.test(\"Body is correct\", function () {",
+													"    pm.response.to.have.body(\"Request body: value3\");",
+													"});",
+													"",
+													"pm.test(\"Header is correct\", function () {",
+													"    pm.expect(pm.response.headers.get('X-RequestBody')).is.eq(\"Header request body: value2\");",
+													"});"
+												],
+												"type": "text/javascript"
+											}
+										}
+									],
+									"request": {
+										"method": "POST",
+										"header": [
+											{
+												"key": "X-Header-1",
+												"type": "text",
+												"value": "val1"
+											},
+											{
+												"key": "X-Header-2",
+												"type": "text",
+												"value": "val2"
+											}
+										],
+										"body": {
+											"mode": "raw",
+											"raw": "key1=value1\nkey2=value2\nkey3=value3"
+										},
+										"url": {
+											"raw": "{{rootUrl}}dynamic-mode-request-body-regex",
+											"host": [
+												"{{rootUrl}}dynamic-mode-request-body-regex"
 											]
 										}
 									},
