@@ -6,7 +6,7 @@ Vagrant.configure("2") do |config|
   config.vm.box_version = "4.1.8"
   config.vm.network :forwarded_port, guest: 80, host: 8080
   config.vm.network :forwarded_port, guest: 443, host: 4430
-  config.vm.provision :shell, path: "bootstrap.sh"
+  config.vm.provision :shell, path: "bootstrap.sh", privileged: false
 
   config.vm.provider "virtualbox" do |vb, override|
     vb.name = "httplaceholder-ubuntu-server"
